--- a/jsongallery.css
+++ b/jsongallery.css
@@ -19,6 +19,12 @@ body {
   color: #FFF;
   margin: 0px;
 }
+
+#header h1 a {
+  color:white;
+  text-decoration:none;
+}
+
 #header .cart-info {
   position: absolute;
   top: 0px;
@@ -35,14 +41,18 @@ img {
 }
 
 .item {
-  float:left;
-  width: 250px;
-  margin-right: 3px;
-  padding: 2px;
-  border: 1px solid #ccc;
-  text-align:center;
-  font-size: 12px;
-}
+	-moz-border-radius:7px 7px 7px 7px;
+	-webkit-border-radius:7px 7px 7px 7px;
+	border-radius:7px 7px 7px 7px;
+	background-color:blanchedAlmond;
+	border:1px solid #CCCCCC;
+	float:left;
+	font-size:12px;
+	margin:10px;
+	padding:2px;
+	text-align:center;
+	width:250px;
+	}
 .item-title {
   font-weight: bold;
 }
