--- a/jsongallery.css
+++ b/jsongallery.css
@@ -22,6 +22,7 @@ body {
   font-family:Arial;
   padding:0px;
   margin:2px;
+  font-size:0.9em;
 }
 
 #header h1 a {
@@ -48,7 +49,6 @@ img {
 	-moz-border-radius:7px 7px 7px 7px;
 	-webkit-border-radius:7px 7px 7px 7px;
 	border-radius:7px 7px 7px 7px;
-	background-color:blanchedAlmond;
 	border:1px solid #CCCCCC;
 	float:left;
 	font-size:12px;
